OnebotChannel 支持将部分 JSON 消息转换成 ShareUrlField